# parabolic-position-encoding

./: .gitignore  CITATION.cff  Cargo.toml  README.md  evaluate.py  install.sh  measure_time.py  preprocess.py  pyproject.toml  train.py
pape/: coco.py  collators.py  configs.py  constants.py  data_types.py  dvs_gesture.py  imagenet.py  io.py  lr_schedule.py  tokenizer.py  ucf101.py
pape/aedat/: reader.py  v2_0.py  v3_1.py
pape/augmentations/events/: __init__.py  augmentation.py  chance.py  compose.py  cut_mix.py  drop_by_area.py  drop_by_time.py  drop_event.py  horizontal_flip.py  horizontal_shear.py  identity.py  one_of.py  rolling.py  rotation.py
pape/augmentations/images/: __init__.py  resize_small.py
pape/data/: __init__.py
pape/data/coco/: datamodule.py  dataset.py
pape/data/dvs_gesture/: datamodule.py  dataset.py
pape/data/gen1/: datamodule.py  dataset.py
pape/data/imagenet/: damodule.py  dataset.py
pape/data/ucf101/: datamodule.py  dataset.py
pape/models/: __init__.py  event_classification.py  event_detection.py  image_classification.py  image_detection.py  video_classification.py
pape/nn/: drop_path.py  encoder.py  event_classifier.py  event_detector.py  image_classifier.py  image_detector.py  video_classifier.py
pape/nn/positions/: __init__.py  absolute.py  alibi.py  base.py  lookhere.py  nope.py  pape.py  pape_ri.py  rope.py  rope_mixed.py
pape/nn/yolov10/: block.py  conv.py  head.py  loss.py  metrics.py  tal.py
pape/preprocessing/: dvs_gesture.py  events.py  gen1.py
pape/prophesee/: evaluation.py
pape/visualizations/: events_video.py  tensor_video.py
src/: event.rs  lib.rs  spiking_patch.rs  tokenizer.rs
